# QtDemo

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: .gdbinit  Dockerfile  devcontainer.json
.github/workflows/: build-and-test.yml
src/: sharedresource.cpp  sharedresource.h  threadworker.cpp  threadworker.h
tests/: thread_test.cpp
